added header/logo and flexed divs

--- a/index.html
+++ b/index.html
@@ -9,11 +9,22 @@
 </head>
 <body>
     <header>
-        <h1>Track Your Crypto Portfolio Live!</h1>
+        <h2>Keep your portfolio...</h2>
+        <div class="headerLogo">
+            <img id="cubes" src="./assets/cubes.png" alt="cubes logo">
+            <h1>balanced</h1>
+        </div>
     </header>
 
-    <div id="ADA">
-
+    <div class="mainContainer">
+        <div class="coinCategories" id="smartContracts">
+            <!-- <img id="adaImage" src="./assets/ADAlogoimage.jpg" alt="ADA coin logo"> -->
+        </div>
+        <div class="coinCategories" id="deFi"></div>
+        <div class="coinCategories" id="privacyCoins"></div>
+        <div class="coinCategories" id="utilityCoins"></div>
+        <div class="coinCategories" id="financeCoins"></div>
+        <div class="coinCategories" id="linkingBlockchains"></div>
     </div>
 
     <script src="./code.js" ></script>
