started animations for cards

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
         <div class="coinCategories" id="linkingBlockchains"></div>
     </div>
 
+    <!-- <div class="animation" id ="a4"> -->
+        <div class="animation" id="a3">
+            <div class="animation" id="a2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi animi aliquam delectus fugiat magnam veniam. Ut explicabo expedita, commodi, eaque accusantium laborum quo reiciendis qui enim, itaque a deleniti quasi!</p>
+                <div class="animation" id="a1">
+                </div>
+            </div>
+        </div>
+    <!-- </div> -->
+
+
     <script src="./code.js" ></script>
 </body>
 </html>
