--- a/index.html
+++ b/index.html
@@ -9,33 +9,143 @@
 </head>
 <body>
     <header>
-        <h2>Keep your portfolio...</h2>
         <div class="headerLogo">
             <img id="cubes" src="./assets/cubes.png" alt="cubes logo">
             <h1>balanced</h1>
+            <h2>Cryptofolio Tracking</h2>
         </div>
     </header>
 
-    <div class="mainContainer">
-        <div class="coinCategories" id="smartContracts">
-            <!-- <img id="adaImage" src="./assets/ADAlogoimage.jpg" alt="ADA coin logo"> -->
-        </div>
-        <div class="coinCategories" id="deFi"></div>
-        <div class="coinCategories" id="privacyCoins"></div>
-        <div class="coinCategories" id="utilityCoins"></div>
-        <div class="coinCategories" id="financeCoins"></div>
-        <div class="coinCategories" id="linkingBlockchains"></div>
-    </div>
+<div class="mainContainer">
 
-    <!-- <div class="animation" id ="a4"> -->
-        <div class="animation" id="a3">
-            <div class="animation" id="a2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi animi aliquam delectus fugiat magnam veniam. Ut explicabo expedita, commodi, eaque accusantium laborum quo reiciendis qui enim, itaque a deleniti quasi!</p>
-                <div class="animation" id="a1">
-                </div>
-            </div>
-        </div>
-    <!-- </div> -->
+
+	<div class="card smartContracts">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Card Front</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					<div class="card__header">
+						<img src="./assets/rocketcoin.jpg" alt="rocket clipart" class="pp" />
+						<h2>Smart Contracts</h2>
+					</div>
+					<div class="card__body">
+						<h3>Smart Contracts body</h3>
+						<p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur <strong>adipiscing</strong> elit. Sed id erat a magna lobortis dictum. Nunc est arcu, <strong>lacinia</strong> quis sapien placerat, <strong>laoreet</strong> tincidunt nulla.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+        
+	<div class="card deFi">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Card Front</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					<div class="card__header">
+						<img src="./assets/rocketcoin.jpg" alt="rocket clipart" class="pp" />
+						<h2>Smart Contracts</h2>
+					</div>
+					<div class="card__body">
+						<h3>Smart Contracts body</h3>
+						<p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur <strong>adipiscing</strong> elit. Sed id erat a magna lobortis dictum. Nunc est arcu, <strong>lacinia</strong> quis sapien placerat, <strong>laoreet</strong> tincidunt nulla.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="card linkingBlockchains">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Card Front</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					<div class="card__header">
+						<img src="./assets/rocketcoin.jpg" alt="rocket clipart" class="pp" />
+						<h2>Smart Contracts</h2>
+					</div>
+					<div class="card__body">
+						<h3>Smart Contracts body</h3>
+						<p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur <strong>adipiscing</strong> elit. Sed id erat a magna lobortis dictum. Nunc est arcu, <strong>lacinia</strong> quis sapien placerat, <strong>laoreet</strong> tincidunt nulla.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="card financeCoins">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Card Front</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					<div class="card__header">
+						<img src="./assets/rocketcoin.jpg" alt="rocket clipart" class="pp" />
+						<h2>Smart Contracts</h2>
+					</div>
+					<div class="card__body">
+						<h3>Smart Contracts body</h3>
+						<p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur <strong>adipiscing</strong> elit. Sed id erat a magna lobortis dictum. Nunc est arcu, <strong>lacinia</strong> quis sapien placerat, <strong>laoreet</strong> tincidunt nulla.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="card privacyCoins">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Card Front</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					<div class="card__header">
+						<img src="./assets/rocketcoin.jpg" alt="rocket clipart" class="pp" />
+						<h2>Smart Contracts</h2>
+					</div>
+					<div class="card__body">
+						<h3>Smart Contracts body</h3>
+						<p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur <strong>adipiscing</strong> elit. Sed id erat a magna lobortis dictum. Nunc est arcu, <strong>lacinia</strong> quis sapien placerat, <strong>laoreet</strong> tincidunt nulla.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <div class="card utilityCoins">
+		<div class="card__inner">
+			<div class="card__face card__face--front">
+				<h2>Card Front</h2>
+			</div>
+			<div class="card__face card__face--back">
+				<div class="card__content">
+					<div class="card__header">
+						<img src="./assets/rocketcoin.jpg" alt="rocket clipart" class="pp" />
+						<h2>Smart Contracts</h2>
+					</div>
+					<div class="card__body">
+						<h3>Smart Contracts body</h3>
+						<p>Lorem ipsum <strong>dolor</strong> sit amet, consectetur <strong>adipiscing</strong> elit. Sed id erat a magna lobortis dictum. Nunc est arcu, <strong>lacinia</strong> quis sapien placerat, <strong>laoreet</strong> tincidunt nulla.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+</div>
+
+
+
+    
+
 
 
     <script src="./code.js" ></script>
